--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>documents-sdk-java</artifactId>
   <packaging>jar</packaging>
   <name>documents-sdk-java</name>
-  <version>3.2.1</version>
+  <version>3.2.4</version>
   <scm>
     <connection>scm:git:git@github.com:wordnik/swagger-mustache.git</connection>
     <developerConnection>scm:git:git@github.com:wordnik/swagger-codegen.git</developerConnection>
@@ -110,13 +110,13 @@
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-joda</artifactId>
       <version>2.1.5</version>
-    </dependency>   
+    </dependency>
     <dependency>
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
       <version>${jodatime-version}</version>
     </dependency>
-    
+
     <!-- oauth dependencies -->
     <dependency>
       <groupId>com.sun.jersey.contribs.jersey-oauth</groupId>
@@ -136,7 +136,7 @@
       <version>${junit-version}</version>
       <scope>test</scope>
     </dependency>
-    
+
     <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
@@ -154,25 +154,30 @@
         <artifactId>commons-lang3</artifactId>
         <version>3.4</version>
     </dependency>
-    
+
     <dependency>
         <groupId>commons-codec</groupId>
         <artifactId>commons-codec</artifactId>
         <version>1.10</version>
     </dependency>
-    
+
+    <dependency>
+	      <groupId>ch.qos.logback</groupId>
+	      <artifactId>logback-classic</artifactId>
+	      <version>0.9.28</version>
+    </dependency>
+
   </dependencies>
   <properties>
     <swagger-annotations-version>1.5.0-M1</swagger-annotations-version>
     <jersey-version>1.7</jersey-version>
     <jackson-version>2.1.4</jackson-version>
     <jodatime-version>2.3</jodatime-version>
-    <junit-version>4.8.1</junit-version>
+    <junit-version>4.11</junit-version>
     <maven-plugin-version>1.0.0</maven-plugin-version>
-    <junit-version>4.8.1</junit-version>
     <jersey-version>1.7</jersey-version>
   </properties>
-  
+
   <distributionManagement>
         <repository>
             <id>viavansi</id>
