--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>documents-sdk-java</artifactId>
   <packaging>jar</packaging>
   <name>documents-sdk-java</name>
-  <version>3.5.141</version>
+  <version>3.5.143</version>
   <scm>
     <connection>scm:git:git@github.com:wordnik/swagger-mustache.git</connection>
     <developerConnection>scm:git:git@github.com:wordnik/swagger-codegen.git</developerConnection>
@@ -48,6 +48,19 @@
         </executions>
       </plugin>
 
+	 <!-- attach source jar -->
+	  <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-source-plugin</artifactId>
+		<executions>
+			<execution>
+				<id>attach-sources</id>
+				<goals>
+					<goal>jar</goal>
+				</goals>
+			</execution>
+		</executions>
+	   </plugin>
       <!-- attach test jar -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -73,6 +86,7 @@
           <target>1.7</target>
         </configuration>
       </plugin>
+	 
     </plugins>
   </build>
   <dependencies>
@@ -171,18 +185,11 @@
   <properties>
     <swagger-annotations-version>1.5.0-M1</swagger-annotations-version>
     <jersey-version>1.7</jersey-version>
-    <jackson-version>2.9.10.1</jackson-version>
+    <jackson-version>2.10.0</jackson-version>
     <jodatime-version>2.3</jodatime-version>
     <junit-version>4.11</junit-version>
     <maven-plugin-version>1.0.0</maven-plugin-version>
     <jersey-version>1.7</jersey-version>
   </properties>
 
-  <distributionManagement>
-        <repository>
-            <id>viavansi</id>
-            <name>Viavansi Repository</name>
-            <url>http://repositorio.viavansi.com/libs-releases-local</url>
-        </repository>
-    </distributionManagement>
 </project>
